-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Cluster Scalability
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
When trying to execute resharding during transitional FCV, the following error is reported:
... "errmsg" : "Resharding is not supported for this version, please update the FCV to latest.", "code" : 115, "codeName" : "CommandNotSupported", ...
This is misleading: by design resharding is guardrailed not to run during FCV changes, but users can totally executed it in downgraded state (e.g. FCV v8.0 in binary v8.2)