SERVER-117389: Fix misleading resharding error message returned in transitional FCV states (#46623)

GitOrigin-RevId: f4299ab765e3e493acd061d32a43ba536133b90f